--- a/school-game-front/src/app/pages/subject/subject-list/subject-list.component.html
+++ b/school-game-front/src/app/pages/subject/subject-list/subject-list.component.html
@@ -9,10 +9,10 @@
                 <div class="card-header border-0">
                     <div class="row align-items-center">
                         <div class="col">
-                            <h3 class="mb-0">Matérias</h3>
+                            <h3 class="mb-0">Subjects</h3>
                         </div>
                         <div class="col text-right">
-                            <a (click)="getNavigation('subjects', '')" class="btn btn-sm btn-primary">Create</a>
+                            <button (click)="getNavigation('subjects', '')" class="btn btn-primary" type="button">Create</button>
                         </div>
                     </div>
                 </div>
