--- a/school-game-front/src/app/pages/subject/subject-edit/subject-edit.component.html
+++ b/school-game-front/src/app/pages/subject/subject-edit/subject-edit.component.html
@@ -9,9 +9,6 @@
             <div class="col-8">
               <h3 class="mb-0">Subject</h3>
             </div>
-            <div class="col-4 text-right">
-<!--              <a href="#!" class="btn btn-sm btn-primary">save</a>-->
-            </div>
           </div>
         </div>
         <div class="card-body">
@@ -30,7 +27,8 @@
               </div>
             </div>
 
-            <button type="submit" class="btn btn-success">Submit</button>
+            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-default">Back</button>
           </form>
         </div>
       </div>
