--- a/school-game-front/src/app/pages/subject/subject-edit/subject-edit.component.html
+++ b/school-game-front/src/app/pages/subject/subject-edit/subject-edit.component.html
@@ -1,4 +1,4 @@
-<div class="header bg-gradient-danger pb-8 pt-5 pt-md-8">
+<div class="header bg-gradient-light pb-8 pt-5 pt-md-8">
 </div>
 <div class="container-fluid mt--7">
   <div class="row">
@@ -28,7 +28,7 @@
             </div>
 
             <button type="submit" class="btn btn-primary">Submit</button>
-            <button type="submit" class="btn btn-default">Back</button>
+            <button (click)="gotoList()" class="btn btn-default">Back</button>
           </form>
         </div>
       </div>
