--- a/school-game-front/src/app/layouts/admin-layout/admin-layout.component.html
+++ b/school-game-front/src/app/layouts/admin-layout/admin-layout.component.html
@@ -2,7 +2,12 @@
 <app-sidebar></app-sidebar>
 <div class="main-content">
   <!-- Top navbar -->
-  <app-navbar></app-navbar>
+
+  <!-- //TODO Disable navbar por enquanto
+    <app-navbar></app-navbar>
+  -->
+
+
   <!-- Pages -->
   <router-outlet></router-outlet>
   <div class="container-fluid">
