--- a/school-game-front/src/app/pages/answers/answer-edit/answer-edit.component.html
+++ b/school-game-front/src/app/pages/answers/answer-edit/answer-edit.component.html
@@ -35,7 +35,7 @@
                 <div class="col-lg-6">
                   <div class="form-group">
                     <label class="form-control-label">Question</label>
-                    <select>
+                    <select class="form-control" data-toggle="select" title="Simple select" data-live-search="true" data-live-search-placeholder="Search ...">
                       <option *ngFor="let item of questions" [ngValue]="item.id">
                         {{ item.name }}
                       </option>
